adjusted yellow color range

--- a/CubeColorIdentifier/CubeColorIdentifier.vcxproj
+++ b/CubeColorIdentifier/CubeColorIdentifier.vcxproj
@@ -56,6 +56,8 @@
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
       <GenerateRelocatableDeviceCode>true</GenerateRelocatableDeviceCode>
+      <Optimization>O2</Optimization>
+      <RuntimeChecks>Default</RuntimeChecks>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
